--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DECBASE</title>
     <link rel="stylesheet" href="/sass/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Poppins:wght@500;600&family=Raleway:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -44,5 +47,79 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="hero__box">
+                <div class="hero__text--box">
+                    <p class="hero__pre-title">
+                        MODERN INTERIOR
+                    </p>
+                    <h1 class="hero__title">
+                        Create Your Interior Design.
+                    </h1>
+                    <p class="hero__post-title">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+    veniam, quis nostrud exercitation.
+                    </p>
+                    <button class="hero__btn" type="button">
+                        CONTACT
+                    </button>
+                    </div>
+                    <div class="hero__img--box">
+                        <img src="./img/hero_img.jpg" alt="interior photo" class="hero__img"
+                        width="716px" height="626px">
+                    </div>
+            </div>
+        </section>
+        <section class="service">
+            <div class="service__box">
+                <p class="service__pre-title">
+                    WHAT WE DO
+                </p>
+                <h2 class="service__title">
+                    Our Service
+                </h2>
+                <ul class="service__list">
+                    <li class="service__item">
+                        <a href="" class="service__item--link">
+                            <h3 class="service__item--title">
+                                Interior Design
+                            </h3>
+                            <p class="service__item--text">
+                                Lorem ipsum dolor amet consectetur
+                                adipiscing elit sed eiusmod tempor
+                                incididunt ut labore.
+                            </p>
+                        </a>
+                    </li>
+                    <li class="service__item">
+                        <a href="" class="service__item--link">
+                            <h3 class="service__item--title">
+                                Architecture
+                            </h3>
+                            <p class="service__item--text">
+                                Lorem ipsum dolor amet consectetur
+                                adipiscing elit sed eiusmod tempor
+                                incididunt ut labore.
+                            </p>
+                        </a>
+                    </li>
+                    <li class="service__item">
+                        <a href="" class="service__item--link">
+                            <h3 class="service__item--title">
+                                Planning
+                            </h3>
+                            <p class="service__item--text">
+                                Lorem ipsum dolor amet consectetur
+                                adipiscing elit sed eiusmod tempor
+                                incididunt ut labore.
+                            </p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
